# STLC

./: .editorconfig  .gitignore  README.md  dune-project  stlc.opam
.github/workflows/: build.yaml  deploy.yaml
STLC/: Ast.v  Ela.v  Lir.v  Typ.v  dune
lib/: Driver.ml  Extr.v  Main.ml  Util.ml  dune  lexer.mll  parser.messages  parser.mly
web/: Main.ml  dune  index.html  style.css
