(library
 (name stlclib))

(coq.extraction
 (prelude Extr)
 (extracted_modules Ast Typ Ela Lir)
 (theories STLC))

(menhir
 (modules parser)
 (flags --explain --exn-carries-state))

(rule
 (targets ParserMessages.ml)
 (deps parser.messages parser.mly)
 (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(ocamllex lexer)

; something about disabling unused imports
; which happens sometimes (Coq's Strings...)
(env
 (dev
  (flags (:standard -w -33))))

